[metadata]
name = reahlchartparameterview
version = 0.1

[options]
py_modules = 
  reahlchartparameterview

install_requires = 
  reahl-component>=6.0,<6.2
  reahl-web>=6.0,<6.2
  reahl-sqlitesupport>=6.0,<6.2
  reahl-sqlalchemysupport>=6.0,<6.2
  reahl-web-declarative>=6.0,<6.2
  plotly>=5.1.0,<5.6.99999

component = 
  

